# texttotile

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: deploy-pages.yml  linux-build.yml  mac-universal-build.yml  main.yml
docs-site/: hugo.yaml
docs-site/.obsidian/: workspace.json
docs-site/assets/css/: custom.css
docs-site/content/: _index.md
docs-site/content/.obsidian/: workspace.json
docs-site/content/docs/: 10-concept.md  12-getting-started.md  12-showcase.md  14-philosophy.md  30-basics.md  30-showcase.md  32-basics.md  34-graphs.md  36-advanced.md  36-styles.md  50-faq.md  52-advanced.md  52-styles.md  54-definitions.md  56-ai-integration.md  70-download.md  _index.md  advanced.md  ai-integration.md  basics.md  concept.md  concepts.md  discussions.md  download.md  faq.md  getting-started.md  graphs.md  philosophy.md  shortcuts.md  showcase.md  styles.md
docs-site/layouts/shortcodes/: theme-figure.html
docs-site/public/: en.search-data.json  en.search.min.6ba34de71e016e3683af34b723fa4600495c364f748d6cb57f7d8d03b1fcbe4f.js  en.search.min.742af1a6c34aa9e5b99810807fd213bcc6ed7a88df6c5d167ee31754cb5a7d58.js  index.html  index.xml  sitemap.xml
docs-site/public/categories/: index.html  index.xml
docs-site/public/css/: custom.css
docs-site/public/docs/: index.html  index.xml
docs-site/public/tags/: index.html  index.xml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+64 files in other folders)
