[package]
name = "texttotile"
version = "0.2.1"
description = "Visualize and navigate structured plain-text outlines."
authors = ["A. O. Wagner"]
edition = "2021"
license = "MIT"
repository = "https://github.com/aowagner/texttotile"
homepage = "https://aowagner.github.io/texttotile/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "texttotile_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.4"
tauri-plugin-persisted-scope = "2"
tauri-plugin-prevent-default = { version = "4", features = ["platform-windows"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8.2.0"
